--- a/AppDev2ndCW/Views/Home/Login.cshtml
+++ b/AppDev2ndCW/Views/Home/Login.cshtml
@@ -124,12 +124,12 @@ body { background-image: url('https://www.maxpixel.net/static/photo/1x/Blue-Book
                     }
                     <form class="form-signin" action="/Home/Login?ReturnUrl=@System.Net.WebUtility.UrlEncode(returnUrl)" method="post">
                         <div class="form-label-group">
-                            <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                            <input type="email" name="email" id="inputEmail" class="form-control" required autofocus>
                             <label for="inputEmail">Email address</label>
                         </div>
 
                         <div class="form-label-group">
-                            <input type="password" name="contact" id="inputPassword" class="form-control" placeholder="Password" required>
+                            <input type="password" name="contact" id="inputPassword" class="form-control" required>
                             <label for="inputPassword">Password</label>
                         </div>
 
