--- a/AppDev2ndCW/Views/Home/index.cshtml
+++ b/AppDev2ndCW/Views/Home/index.cshtml
@@ -2,80 +2,24 @@
     Layout = "_IndexLayout";
 }
 <style>
+@*    body {
+        background-image: url("../../wwwroot/img/booklib.jpg");
+    }
     header.masthead {
-        background-image: url(images/booklib.jpg);
+        background-image: url(../../wwwroot/img/booklib.jpg);
         background-size: cover;
         background-size: 100%;
     }
     .btn-primary {
         background-color: darkred;
         border-color: darkred;
-    }
+    }*@
 </style>
-<header class="masthead text-center text-white">
+<header class="masthead text-center text-black">
     <div class="masthead-content">
         <div class="container">
             <h1 class="masthead-heading mb-0">Pustak-ala-ya</h1>
             <h2 class="masthead-subheading mb-0">A Book Stock Management System built with simplicity and minimalism</h2>
-            @*<a href="#" class="btn btn-primary btn-xl rounded-pill mt-5" style="background-color:#CF000F;">Learn More</a>*@
         </div>
     </div>
-    <!--<div class="bg-circle-1 bg-circle"></div>
-    <div class="bg-circle-2 bg-circle"></div>
-    <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div>-->
 </header>
-
-<section>
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
-                <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="/img/01.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6 order-lg-1">
-                <div class="p-5">
-                    <h2 class="display-4">For those about to rock...</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6">
-                <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="/img/02.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="p-5">
-                    <h2 class="display-4">We salute you!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
-                <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="/img/03.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6 order-lg-1">
-                <div class="p-5">
-                    <h2 class="display-4">Let there be rock!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
