--- a/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
@@ -34,6 +34,11 @@
             overflow-x: hidden;
         }
         </style>*@
+    <style>
+        body {
+            background-image: url("../../wwwroot/img/booklib.jpg")
+        }
+    </style>
 
     @RenderSection("manualCSS", false)
 </head>
@@ -137,13 +142,6 @@
                     </div>
                 </li>
             </ul>
-            @*<div class="text-gray-400 text-uppercase px-3 px-lg-4 py-4 font-weight-bold small headings-font-family">EXTRAS</div>
-                <ul class="sidebar-menu list-unstyled">
-                    <li class="sidebar-list-item"><a href="#" class="sidebar-link text-muted"><i class="o-database-1 mr-3 text-gray"></i><span>Demo</span></a></li>
-                    <li class="sidebar-list-item"><a href="#" class="sidebar-link text-muted"><i class="o-imac-screen-1 mr-3 text-gray"></i><span>Demo</span></a></li>
-                    <li class="sidebar-list-item"><a href="#" class="sidebar-link text-muted"><i class="o-paperwork-1 mr-3 text-gray"></i><span>Demo</span></a></li>
-                    <li class="sidebar-list-item"><a href="#" class="sidebar-link text-muted"><i class="o-wireframe-1 mr-3 text-gray"></i><span>Demo</span></a></li>
-                </ul>*@
         </div>
         <div class="page-holder w-100 d-flex flex-wrap">
 
