delete linked with view

--- a/AppDev2ndCW/Views/Admin/ManageCustomers.cshtml
+++ b/AppDev2ndCW/Views/Admin/ManageCustomers.cshtml
@@ -51,7 +51,7 @@
                                                     <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
                                                 </li>
                                                 <li class="list-inline-item">
-                                                    <button href="@Url.Action("Delete",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
+                                                    <a href="@Url.Action("DeleteCustomers","Admin",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
                                                 </li>
                                             </ul>
                                         </td>
