--- a/AppDev2ndCW/Views/Books/Category.cshtml
+++ b/AppDev2ndCW/Views/Books/Category.cshtml
@@ -20,11 +20,11 @@
                 </div>
             </div>
 
-            <form action="" method="post">
+            <form action="/Books/AddCategory" method="post">
                 <!-- Category Input -->
                 <div class="form-group mb-4">
                     <div class="datepicker date input-group p-0 shadow-sm">
-                        <input type="text" placeholder="Please enter the category name" class="form-control py-4 px-4" id="categoryName" required>
+                        <input type="text" name="catName" placeholder="Please enter the category name" class="form-control py-4 px-4" id="categoryName" required>
                         <div class="input-group-append"><span class="input-group-text px-4"><i class="fa fa-book-open"></i></span></div>
                     </div>
                 </div>
