render data in book inventory and book category data tables

--- a/AppDev2ndCW/Views/Books/BooksInventory.cshtml
+++ b/AppDev2ndCW/Views/Books/BooksInventory.cshtml
@@ -28,10 +28,11 @@
                             <table class="table m-0">
                                 <thead>
                                     <tr>
-                                        <th scope="col">#</th>
                                         <th scope="col">Title</th>
-                                        <th scope="col">Author</th>
-                                        <th scope="col">Category</th>
+                                        <th scope="col">Author ID</th>
+                                        @*<th scope="col">Desc</th>*@
+                                        <th scope="col">Category ID</th>
+                                        <th scope="col">Price</th>
                                         <th scope="col">Stocked Date</th>
                                         <th scope="col">Stock Quantity</th>
                                         <th scope="col">Sales Date</th>
@@ -39,27 +40,25 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-
+                                    @foreach (var item in Model)
+                                    {
                                     <tr>
-                                        <th scope="row">1</th>
-                                        <td>The Alchemist</td>
-                                        <td>Paulo Coehelo</td>
-                                        <td>Novels</td>
-                                        <td>26 April, 2021</td>
-                                        <td>100</td>
-                                        <td>28 April, 2021</td>
-                                        <td>
-                                            <!-- Call to action buttons -->
-                                            <ul class="list-inline m-0">
-                                                <li class="list-inline-item">
-                                                    <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
-                                                </li>
-                                            </ul>
-                                        </td>
+                                        <td>@item.Book_name</td>
+                                        <td>@item.Author_Id</td>
+                                        @*<td>@item.Description</td>*@
+                                        <td>@item.Category_Id</td>
+                                        <td>@item.Price</td>
+                                        <td>@item.Stocked_Date</td>
+                                        <td>@item.Stock_Quantity</td>
+                                        <td>@item.Sales_Date</td>
+                                          <th>
+                                             <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                                          </th>
+                                          <th>
+                                             <button href="@Url.Action("Delete",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
+                                          </th>
                                     </tr>
+                                    }
 
                                 </tbody>
                             </table>
