--- a/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
@@ -134,7 +134,7 @@
                     <div id="pages" class="collapse">
                         <ul class="sidebar-menu list-unstyled border-left border-primary border-thick">
                             <li class="sidebar-list-item"><a href="@Url.ActionLink("Category", "Books")" class="sidebar-link text-muted pl-lg-5">Category</a></li>
-                            <li class="sidebar-list-item"><a href="@Url.ActionLink("AddBook", "Books")" class="sidebar-link text-muted pl-lg-5">Books</a></li>
+                            <li class="sidebar-list-item"><a href="@Url.ActionLink("AddBook", "Books")" class="sidebar-link text-muted pl-lg-5">Add Books</a></li>
                             <li class="sidebar-list-item"><a href="@Url.ActionLink("BooksInventory", "Books")" class="sidebar-link text-muted pl-lg-5">Stock</a></li>
                             <li class="sidebar-list-item"><a href="@Url.ActionLink("List", "Sales")" class="sidebar-link text-muted pl-lg-5">Sales</a></li>
 
