--- a/AppDev2ndCW/Views/Books/Category.cshtml
+++ b/AppDev2ndCW/Views/Books/Category.cshtml
@@ -68,7 +68,7 @@
                                              <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
                                           </th>
                                           <th>
-                                             <button href="@Url.Action("Delete",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
+                                             <a href="@Url.Action("DeleteCategory","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
                                           </th>
                                     </tr>
                                     }
