--- a/AppDev2ndCW/Views/Home/index.cshtml
+++ b/AppDev2ndCW/Views/Home/index.cshtml
@@ -1,6 +1,15 @@
-﻿@{ 
+﻿@{
     Layout = "_IndexLayout";
 }
+@*@if (ViewBag.islogout)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>Successfully Logged out!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}*@
 <style>
 @*    body {
         background-image: url("../../wwwroot/img/booklib.jpg");
