--- a/AppDev2ndCW/Views/Books/Category.cshtml
+++ b/AppDev2ndCW/Views/Books/Category.cshtml
@@ -1,6 +1,24 @@
 ﻿@{
     Layout = "_DashboardLayout";
 }
+@if (ViewBag.issuccess)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>New category added successfully!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+else if (ViewBag.isdeletecat)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>Category Deleted!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
 
 <div class="container">
     <header class="text-center">
@@ -59,18 +77,18 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                     @foreach (var item in Model)
+                                    @foreach (var item in Model)
                                     {
-                                    <tr>
-                                        <td>@item.Id</td>
-                                        <td>@item.Category</td>
-                                          <th>
-                                             <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
-                                          </th>
-                                          <th>
-                                             <a href="@Url.Action("DeleteCategory","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
-                                          </th>
-                                    </tr>
+                                        <tr>
+                                            <td>@item.Id</td>
+                                            <td>@item.Category</td>
+                                            <th>
+                                                <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                                            </th>
+                                            <th>
+                                                <a href="@Url.Action("DeleteCategory","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
+                                            </th>
+                                        </tr>
                                     }
 
                                 </tbody>
